Blockbase: Remove alignment fix (#4186)

--- a/blockbase/assets/ponyfill.css
+++ b/blockbase/assets/ponyfill.css
@@ -79,10 +79,6 @@ img {
 	}
 }
 
-.wp-block-group:not(.site-header) {
-	overflow: auto;
-}
-
 .aligncenter {
 	text-align: center;
 }
